--- a/public/assets/scss/large/_home.scss
+++ b/public/assets/scss/large/_home.scss
@@ -52,15 +52,6 @@
 	}
 }
 
-@-webkit-keyframes slide-fade {
-        0% { -webkit-transform: translate3d(0, -3px, 0); 
-             -webkit-animation-timing-function: ease-in;
-             opacity: 0; }
-       100% { -webkit-transform: translate3d(0, 0px, 0); 
-             -webkit-animation-timing-function: ease-out;
-             opacity: 1; }
-}
-
 .main-content {
 	z-index: -3;
 	background: $white;
@@ -72,9 +63,6 @@
 		padding: 7px 10px;
 		color: $white;
 		text-decoration: none;
-	}
-	.fade {
-		-webkit-animation: slide-fade 0.4s;
 	}
 	p { 
 		margin: 0 0 10px 0;
